# Baari

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CHANGES.md  Dockerfile  HANDOFF.md  PRD.md  README.md  STATUS.md  WALKTHROUGH.md  docker-compose.yml  pyproject.toml  requirements.txt  start-baari.bat  start-baari.command  vercel.json
.github/workflows/: cron-tick.yml  neon-warm.yml
api/: index.py
app/: config.py  db.py  deps.py  i18n.py  models.py  templating.py  time_utils.py  vocab.py
app/routes/: auth.py  booking.py  cron.py  queue.py  reports.py  search.py  settings.py  setup.py  signup.py
app/services/: auth.py  booking_service.py  cred_ledger.py  cron_jobs.py  day_close.py  notifications.py  queue_service.py  rate_limit.py  reports_service.py  search_service.py  settings_service.py  signup_service.py  subtoken_service.py  turnstile.py
docker/: entrypoint.sh
docs/: cloudflare-setup.md
frontend/: .env.example  .gitignore  AGENTS.md  README.md  drizzle.config.ts  instrumentation-client.ts  middleware.ts  next.config.ts  package-lock.json  package.json  railway.toml  sentry.edge.config.ts  sentry.server.config.ts  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: country-code-picker.tsx  posthog-provider.tsx  site-footer.tsx  site-header.tsx  theme-toggle.tsx
frontend/lib/: admin.ts  auth.ts  (+23 more)
marketing/: Baari_Clinic_Pitch.docx  Baari_Salon_Pitch.docx
migrations/: env.py
promo/: README.md  package-lock.json  package.json  remotion.config.ts  tsconfig.json
scripts/: create_user.py  make_late.py
(+202 files in other folders)
