[project]
name = "baari"
version = "0.1.0"
description = "ClinicQueue — queue-management dashboard for single-doctor homeopathy clinics."
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.115.6",
    "uvicorn[standard]==0.34.0",
    "jinja2==3.1.4",
    "python-multipart==0.0.19",
    "sqlmodel==0.0.22",
    "psycopg[binary]==3.2.3",
    "alembic==1.14.0",
    "passlib[bcrypt]==1.7.4",
    "bcrypt==4.0.1",
    "pyjwt==2.10.1",
    "pydantic-settings==2.7.0",
    "httpx==0.28.1",
    "python-dateutil==2.9.0.post0",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.4",
    "pytest-asyncio==0.25.0",
    "ruff==0.8.4",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "B", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
